[package]
name = "anvil-helpers"
version = "0.0.1" 
edition = "2021"
authors = ["Louis Amas <amaslouis@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.5"
serde = "1.0.188"
serde_json = "1.0.107"
tracing = "0.1.37"
tracing-test = "0.2.4"
