[package]
name = "anvil-helpers"
build = "build.rs"
version = "0.0.1" 
edition = "2021"
authors = ["Louis Amas <amaslouis@protonmail.com>"]


[build-dependencies]
ethers = "2.0.10"
ethers-core = "2.0.10"
serde = "1.0.188"
serde_json = "1.0.107"

[dependencies]
ethers = "2.0.10"
ethers-core = "2.0.10"
serde = "1.0.188"
serde_json = "1.0.107"
