[package]
name = "test-executable"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ethers = { version = "2.0", features = ["ws"]}
tokio =  { version = "1.29.1", features = ["macros", "rt", "rt-multi-thread"]}
tracing = "0.1.37"
tracker = { path = "../tracker" }
