[package]
name = "tracker-providers"
version = "0.0.1" 
edition = "2021"
authors = ["Louis Amas <amaslouis@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
ethers = { version = "2.0", features = ["ws"]}
ethers-providers = "2.0.10"
tokio =  { version = "1.29.1", features = ["macros", "rt", "rt-multi-thread"]}
tracing = "0.1.37"
tracing-test = "0.2.4"
tracker = { path = "../tracker" }
anvil-helpers = { path = "../anvil-helpers" }
